update april 2019 data

--- a/scripts/adopt-a-drain/maintainer/maintainer-config.json
+++ b/scripts/adopt-a-drain/maintainer/maintainer-config.json
@@ -1,1 +1,1 @@
-{"gh_file_name": "clean.csv", "gh_file_type": "csv", "dw_title": "GRB Storm Drains", "dw_desc": "Storm Drains of the Grand River Basin, Michigan", "dw_table_name": "clean"}
+{"gh_file_name": "grb_drains-2019-04-02.csv", "gh_file_type": "csv", "dw_title": "GRB Storm Drains", "dw_desc": "Storm Drains of the Grand River Basin, Michigan", "dw_table_name": "grb_drains-2019-04-02"}
